--- a/trunk/sqlworkbench/src/workbench/resource/default.properties
+++ b/trunk/sqlworkbench/src/workbench/resource/default.properties
@@ -888,6 +888,10 @@ workbench.sql.ignorecatalog.dbase=*
 workbench.db.dbase.supportgetpk=false
 workbench.db.dbase.supportquerytimeout=false
 
+# UCanAccess JDBC driver
+workbench.db.ucanaccess.catalogs.supported=false
+workbench.db.ucanaccess.objectname.case=mixed
+
 #! MS Access settings
 workbench.db.access.supportgetpk=false
 workbench.db.access.supportquerytimeout=false
