Add template for Elasticsearch

--- a/sqlworkbench/src/workbench/resource/default.properties
+++ b/sqlworkbench/src/workbench/resource/default.properties
@@ -1298,6 +1298,9 @@ workbench.db.greenplum.completion.ignore.schema=pg_catalog
 # See MainWindow.connected()
 workbench.db.redshift.manual=https://docs.aws.amazon.com/redshift/latest/dg/welcome.html
 
+# Elasticsearch
+workbench.db.elasticsearch.manual=https://www.elastic.co/products/stack/elasticsearch-sql
+
 # A list of "window IDs" where the stored size should be reset
 # when switching from one major version to the next
 workbench.gui.profiles.ProfileSelectionDialog.reset_size=true
